third_party/move/move-compiler/tests/move_check/naming/double_fun_decl.exp
error[E02001]: duplicate declaration, item, or annotation
  ┌─ tests/move_check/naming/double_fun_decl.move:7:9
  │
3 │     fun bar(x: u64): u64 {
  │         --- Alias previously defined here
  ·
7 │     fun bar(): u64 {
  │         ^^^ Duplicate module member or alias 'bar'. Top level names in a namespace must be unique

error[E02001]: duplicate declaration, item, or annotation
   ┌─ tests/move_check/naming/double_fun_decl.move:15:9
   │
11 │     spec fun foo(x: u64): u64 {
   │              --- Alias previously defined here
   ·
15 │     fun foo() {
   │         ^^^ Duplicate module member or alias 'foo'. Top level names in a namespace must be unique

error[E04017]: too many arguments
   ┌─ tests/move_check/naming/double_fun_decl.move:16:9
   │
16 │         foo(1)
   │         ^^^^^^
   │         │  │
   │         │  Found 1 argument(s) here
   │         Invalid call of '0x42::M::foo'. The call expected 0 argument(s) but got 1

